# fp-benchmarks-aachen

./: .gitignore  CMakeLists.txt  README.md
real/: CMakeLists.txt
real/diction/: spec.yml
real/diction/diction-1.11/: Makefile  Makefile.orig  config.h  config.status  style.c
real/gmp/: CMakeLists.txt  configure-wrapper.sh.in  gmp_dependency_handler.py  main.c  spec.yml
real/gmp/benchmarks/: main.c  spec.yml
real/gmp/benchmarks/gmp-6.1.1/: assert.c  config.status  errno.c  gmp.h  invalid.c  mp_bpl.c  mp_dv_tab.c  mp_minv_tab.c  nextprime.c
real/gmp/benchmarks/gmp-6.1.1/cxx/: Makefile
real/gmp/benchmarks/gmp-6.1.1/demos/: Makefile
real/gmp/benchmarks/gmp-6.1.1/doc/: Makefile
real/gmp/benchmarks/gmp-6.1.1/mpf/: Makefile  add.c  add_ui.c  clears.c  cmp.c  cmp_si.c  cmp_ui.c  cmp_z.c  div_2exp.c  div_ui.c  dump.c  eq.c  fits_sint.c  fits_sshort.c  fits_uint.c  fits_ulong.c  get_d.c  get_prc.c  get_str.c  init.c  inp_str.c  int_p.c  iset.c  mul.c  mul_ui.c  neg.c  pow_ui.c  random2.c  set.c  set_d.c  set_prc_raw.c  set_si.c  set_str.c  set_ui.c  size.c  sqrt.c  sqrt_ui.c  sub_ui.c  trunc.c  ui_div.c  (+2 more)
real/gmp/benchmarks/gmp-6.1.1/mpn/: add_1.c  add_n_sub_n.c  and_n.c  andn_n.c  bdiv_dbm1c.c  bdiv_q_1.c  bdiv_qr.c  binvert.c  broot.c  brootinv.c  bsqrtinv.c  cmp.c  cnd_sub_n.c  cnd_swap.c  com.c  comb_tables.c  copyd.c  copyi.c  dcpi1_divappr_q.c  div_qr_1n_pi1.c  div_qr_2.c  diveby3.c  divexact.c  divis.c  divrem_1.c  divrem_2.c  fib_table.c  gcd_1.c  gcd_subdiv_step.c  gcdext_1.c  gcdext_lehmer.c  hamdist.c  hgcd2_jacobi.c  hgcd_appr.c  hgcd_step.c  invert.c  invertappr.c  ior_n.c  iorn_n.c  jacbase.c  (+68 more)
real/gmp/benchmarks/gmp-6.1.1/mpq/: abs.c  aors.c  clear.c  clears.c  cmp.c  cmp_si.c  cmp_ui.c  equal.c  get_d.c  get_den.c  get_num.c  get_str.c  init.c  inits.c  inp_str.c  inv.c  neg.c  out_str.c  (+3 more)
real/gmp/gmp-6.1.1/: Makefile  compat.c  config.m4  errno.c  extract-dbl.c  invalid.c  libtool  memory.c  mp_clz_tab.c  mp_get_fns.c  mp_set_fns.c  primesieve.c  tal-reent.c  version.c
real/gmp/gmp-6.1.1/mpf/: abs.c  ceilfloor.c  clear.c  cmp_d.c  div.c  fits_slong.c  fits_ushort.c  get_d_2exp.c  get_dfl_prec.c  get_si.c  get_ui.c  init2.c  inits.c  iset_d.c  iset_si.c  iset_str.c  iset_ui.c  mul_2exp.c  out_str.c  reldiff.c  set_dfl_prec.c  set_prc.c  set_q.c  set_z.c  sub.c  swap.c
real/gmp/gmp-6.1.1/mpn/: Makefile  add.c  add_err1_n.c  add_err2_n.c  add_err3_n.c  add_n.c  addmul_1.c  bdiv_q.c  bsqrt.c  cnd_add_n.c  config.h  dcpi1_bdiv_q.c  dcpi1_bdiv_qr.c  dcpi1_div_q.c  dcpi1_div_qr.c  div_q.c  div_qr_1.c  div_qr_2n_pi1.c  div_qr_2u_pi1.c  dive_1.c  divrem.c  dump.c  fib2_ui.c  gcd.c  gcdext.c  get_d.c  get_str.c  hgcd.c  hgcd2.c  hgcd_jacobi.c  hgcd_matrix.c  hgcd_reduce.c  jacobi.c  jacobi_2.c  matrix22_mul.c  mod_1.c  mod_1_2.c  mod_1_3.c  mod_34lsub1.c  mode1o.c  (+45 more)
real/gmp/gmp-6.1.1/mpq/: Makefile  canonicalize.c  div.c  md_2exp.c  mul.c  set_d.c  set_den.c  set_f.c  set_num.c  set_ui.c  set_z.c  swap.c
real/gmp/gmp-6.1.1/mpz/: Makefile  add.c  add_ui.c  aorsmul.c  bin_uiui.c  cdiv_qr_ui.c  cdiv_r_ui.c  cdiv_ui.c  cfdiv_r_2exp.c  clear.c  clears.c  cmpabs.c  com.c  combit.c  dive_ui.c  divis.c  divis_2exp.c  divis_ui.c  dump.c  export.c  fac_ui.c  fdiv_q.c  fdiv_q_ui.c  fdiv_qr_ui.c  fdiv_ui.c  fib2_ui.c  fits_sint.c  fits_slong.c  fits_sshort.c  gcd.c  gcd_ui.c  gcdext.c  get_str.c  get_ui.c  import.c  init2.c  inits.c  inp_raw.c  invert.c  iset_si.c  (+39 more)
real/gmp/gmp-6.1.1/printf/: Makefile  asprintf.c  fprintf.c  printffuns.c  snprintf.c  snprntffuns.c  sprintffuns.c
real/gmp/gmp-6.1.1/rand/: randbui.c  randdef.c  randmui.c  randsdui.c
real/gmp/gmp-6.1.1/scanf/: Makefile  scanf.c  sscanffuns.c  vscanf.c  vsscanf.c
real/gmp/gmp-6.1.1/tests/: Makefile
real/gmp/gmp-6.1.1/tune/: Makefile
real/libmatheval/: main.c  spec.yml
real/libmatheval/libmatheval-1.1.11/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  libtool
real/libmatheval/libmatheval-1.1.11/autom4te.cache/: output.0  requests  traces.0
real/libmatheval/libmatheval-1.1.11/doc/: Makefile  Makefile.in  libmatheval.info  stamp-vti
real/libmatheval/libmatheval-1.1.11/lib/: Makefile  error.c  g77_interface.c  matheval.c  node.c  parser.c  scanner.c  symbol_table.c  xmalloc.c  xmath.c
real/libmatheval/libmatheval-1.1.11/tests/: Makefile  Makefile.in  atconfig  matheval.c  matheval.sh  package.m4  testsuite
real/numerical_recipes/: main.c  spec.yml
real/numerical_recipes/numerical_recipes/: gaussj.c  gaussj.h  nrutil.h  qrdcmp.c  qrdcmp.h
real/sorting/: main.c  spec.yml
real/sorting/C-Sorting-Algorithms/: Makefile  README.md  main.c  main.h  randomInts.txt  selectionSort.c  selectionSort.h
real/units/: spec.yml
real/units/units-2.13/: Makefile  Makefile.Win  Makefile.in  NEWS  README  UnitsMKS.texinfo  UnitsWin.texinfo  config.status  configure  configure.ac  currency.units  parse.tab.c  parse.y  setvcvars.sh  texi2man  units.c  units.dvi  units.h  units.info  units.man  units.texinfo  units.txt  units_cur2  units_cur3
real/wxpro/: LICENSE  main.c  spec.yml  units.c  units.h
(+163 files in other folders)
